OPIK-1771: Add missing validation on thread status (#2578)